--- a/database-deploy/Dockerfile
+++ b/database-deploy/Dockerfile
@@ -1,3 +1,4 @@
 FROM postgres:latest
 
-COPY ./sql/ /docker-entrypoint-initdb.d/
+COPY ./sql/01-schema.sql /docker-entrypoint-initdb.d/01-schema.sql
+COPY ./sql/02-data.sql /docker-entrypoint-initdb.d/02-data.sql
