--- a/deployment/Dockerfile-products
+++ b/deployment/Dockerfile-products
@@ -1,1 +1,9 @@
-# todo
+FROM openjdk:17-alpine
+
+WORKDIR /app
+
+COPY /target/microproducts-0.0.1-SNAPSHOT.jar /app/microproducts.jar
+
+EXPOSE 8080
+
+ENTRYPOINT ["java", "-jar", "/app/microproducts.jar"]
