--- a/deployment/Dockerfile-orders
+++ b/deployment/Dockerfile-orders
@@ -1,1 +1,18 @@
-# todo
+FROM maven:3.8.4-openjdk-17-slim as builder
+
+WORKDIR /app
+
+COPY ../src ./src
+
+RUN mvn clean install -DskipTests
+
+FROM openjdk:17-alpine
+
+WORKDIR /app
+
+# todo someday - app version can be parametrized
+COPY --from=builder /app/target/microproducts-0.0.1-SNAPSHOT.jar /app/microproducts.jar
+
+EXPOSE 8080
+
+ENTRYPOINT ["java", "-jar", "/app/microproducts.jar"]
