--- a/deployment/Dockerfile-orders
+++ b/deployment/Dockerfile-orders
@@ -2,7 +2,7 @@ FROM maven:3.8.4-openjdk-17-slim as builder
 
 WORKDIR /app
 
-COPY ../src ./src
+COPY ../microorders/src ./src
 
 RUN mvn clean install -DskipTests
 
@@ -11,8 +11,8 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # todo someday - app version can be parametrized
-COPY --from=builder /app/target/microproducts-0.0.1-SNAPSHOT.jar /app/microproducts.jar
+COPY --from=builder /app/target/microorders-1.0.0.jar /app/microorders.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "/app/microproducts.jar"]
+ENTRYPOINT ["java", "-jar", "/app/microorders.jar"]
