--- a/deployment/Dockerfile-products
+++ b/deployment/Dockerfile-products
@@ -2,7 +2,7 @@ FROM maven:3.8.4-openjdk-17-slim as builder
 
 WORKDIR /app
 
-COPY ../src ./src
+COPY ../microproducts/src ./src
 
 RUN mvn clean install -DskipTests
 
@@ -11,7 +11,7 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # todo someday - app version can be parametrized
-COPY --from=builder /app/target/microproducts-0.0.1-SNAPSHOT.jar /app/microproducts.jar
+COPY --from=builder /app/target/microproducts-1.0.0.jar /app/microproducts.jar
 
 EXPOSE 8080
 
