--- a/deployment/Dockerfile-orders
+++ b/deployment/Dockerfile-orders
@@ -2,7 +2,9 @@ FROM maven:3.8.4-openjdk-17-slim as builder
 
 WORKDIR /app
 
-COPY ../microorders/src ./src
+COPY ../ .
+
+WORKDIR /app/microorders
 
 RUN mvn clean install -DskipTests
 
@@ -11,7 +13,7 @@ FROM openjdk:17-alpine
 WORKDIR /app
 
 # todo someday - app version can be parametrized
-COPY --from=builder /app/target/microorders-1.0.0.jar /app/microorders.jar
+COPY --from=builder /app/microorders/target/microorders-1.0.0.jar /app/microorders.jar
 
 EXPOSE 8080
 
