--- a/microorders/src/main/resources/application.properties
+++ b/microorders/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8081
+
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
