add local profile with profile properties

--- a/microorders/src/main/resources/application.properties
+++ b/microorders/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATA
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 
-product.service.url=http://micro-products-service:8080
+product.service.url=http://micro-products-service:8080/products
