--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,15 @@
 		<module>microorders</module>
 	</modules>
 
+	<profiles>
+		<profile>
+			<id>local</id>
+			<properties>
+				<spring.profiles.active>local</spring.profiles.active>
+			</properties>
+		</profile>
+	</profiles>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
