--- a/deployment/services-deployment.yaml
+++ b/deployment/services-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: micro-products-deploy
 spec:
-  replicas: 1
+  replicas: 8
   selector:
     matchLabels:
       project: micro-products-deploy
@@ -33,13 +33,13 @@ spec:
           # todo someday - passwords can be stored in secrets
           ports:
             - containerPort: 8080  # Adjust if app uses a different port
-#          resources:
-#            requests:
-#              memory: "400Mi"
-#              cpu: "300m"
-#            limits:
-#              memory: "512Mi"
-#              cpu: "400m"
+          resources:
+            requests:
+              memory: "400Mi"
+              cpu: "300m"
+            limits:
+              memory: "512Mi"
+              cpu: "400m"
 #          resources:
 #            requests:
 #              memory: "512Mi"
@@ -61,13 +61,13 @@ spec:
 #            limits:
 #              memory: "4096Mi"
 #              cpu: "1600m"
-          resources:
-            requests:
-              memory: "4096Mi"
-              cpu: "1600m"
-            limits:
-              memory: "8192Mi"
-              cpu: "2000m"
+#          resources:
+#            requests:
+#              memory: "4096Mi"
+#              cpu: "1600m"
+#            limits:
+#              memory: "8192Mi"
+#              cpu: "2000m"
 ---
 
 apiVersion: v1
@@ -92,7 +92,7 @@ kind: Deployment
 metadata:
   name: micro-orders-deploy
 spec:
-  replicas: 1
+  replicas: 8
   selector:
     matchLabels:
       project: micro-orders-deploy
@@ -122,13 +122,13 @@ spec:
           # todo someday - passwords can be stored in secrets
           ports:
             - containerPort: 8081  # Adjust if app uses a different port
-#          resources:
-#            requests:
-#              memory: "400Mi"
-#              cpu: "300m"
-#            limits:
-#              memory: "512Mi"
-#              cpu: "400m"
+          resources:
+            requests:
+              memory: "400Mi"
+              cpu: "300m"
+            limits:
+              memory: "512Mi"
+              cpu: "400m"
 #          resources:
 #            requests:
 #              memory: "512Mi"
@@ -150,13 +150,13 @@ spec:
 #            limits:
 #              memory: "4096Mi"
 #              cpu: "1600m"
-          resources:
-            requests:
-              memory: "4096Mi"
-              cpu: "1600m"
-            limits:
-              memory: "8192Mi"
-              cpu: "2000m"
+#          resources:
+#            requests:
+#              memory: "4096Mi"
+#              cpu: "1600m"
+#            limits:
+#              memory: "8192Mi"
+#              cpu: "2000m"
 
 ---
 
@@ -199,3 +199,45 @@ spec:
                 name: micro-orders-service
                 port:
                   number: 8081
+
+---
+
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: micro-products-hpa
+  namespace: default
+spec:
+  scaleTargetRef:
+    kind: Deployment
+    name: micro-products-deploy
+  minReplicas: 1
+  maxReplicas: 10
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 50
+
+---
+
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: micro-orders-hpa
+  namespace: default
+spec:
+  scaleTargetRef:
+    kind: Deployment
+    name: micro-orders-deploy
+  minReplicas: 1
+  maxReplicas: 10
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 50
